<resources>
    <string name="app_name">GoProjectPisat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_about">About</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- For some reason this is the title used for all fragments -->
    <string name="title_activity_schedule">PolyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to drawer -->
    <string name="nav_header_name">Vasiliy</string>
    <string name="nav_header_surname">Pupkin</string>
    <string name="nav_header_group">Group:</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav__messages">Messages</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_docs">Documents</string>
    <string name="nav_news">News</string>
    <string name="nav_memes">PolyMemes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Strings related to profile -->
    <string name="profile_status">Status:</string>
    <string name="profile_info">Info</string>
    <string name="profile_rec_book">Record book:</string>
    <string name="profile_institute">Institute:</string>
    <string name="profile_speciality">Speciality:</string>
    <string name="profile_group">Group:</string>
    <string name="profile_achievements">Achievements</string>
    <string name="profile_logout">Log me out</string>

    <!-- Strings related to scheduleItem -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_classes">No classes today!</string>

    <!-- Strings related to about -->
    <string name="about_info">Info</string>
    <string name="about_info_content">
        This is the beautiful app for all polykeknicks!
    </string>
    <string name="about_authors">Authors</string>
    <string name="about_authors_content">Who cares actually?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_start_activity">Choose start screen:</string>
    <string-array name="pref_start_activity_list_titles">
        <item>Profile</item>
        <item>Schedule</item>
        <item>Messages</item>
    </string-array>
    <string-array name="pref_start_activity_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_schedule_type">Preferred schedule type:</string>
    <string-array name="pref_schedule_types_titles">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="pref_schedule_types_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_group_notifications">Group chat notifications</string>
    <string name="pref_private__chat_notifications">Private chat notifications</string>
</resources>
