<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_msg_holder">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_group_messages" />
        <item
            android:id="@+id/nav_private_chat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_private_chat" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_schedule" />

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_docs" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_news" />
    </group>

    <group android:id="@+id/nav_other">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_about" />
    </group>

</menu>
