<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.dekinci.lksbstu.AboutActivity">

    <TextView
        android:id="@+id/about_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:textAppearance="@style/Header2Text" />
    <TextView
        android:id="@+id/about_info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/about_info_content"
        android:textAppearance="@style/CommonText" />
    <TextView
        android:id="@+id/about_authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_authors"
        android:textAppearance="@style/Header2Text" />
    <TextView
        android:id="@+id/about_authors_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/about_authors_content"
        android:textAppearance="@style/CommonText" />
</LinearLayout>
