<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dekinci.lksbstu.fragment.ProfileFragment">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/nav_header_surname"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/profile_photo"
        app:layout_constraintTop_toTopOf="@id/profile_photo" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/profile_surname"
        app:layout_constraintTop_toBottomOf="@id/profile_surname"
        app:layout_constraintBottom_toBottomOf="@id/profile_photo"/>

    <TextView
        android:id="@+id/profile_patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Batkovich"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/profile_name"
        app:layout_constraintTop_toTopOf="@id/profile_name" />

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_info"
        app:layout_constraintStart_toStartOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

    <View
        android:id="@+id/profile_info_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/primary_dark"
        app:layout_constraintStart_toStartOf="@+id/profile_info"
        app:layout_constraintTop_toBottomOf="@+id/profile_info" />

    <TableLayout
        android:id="@+id/profile_info_holder"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_separator">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/profile_rec_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_rec_book" />

            <TextView
                android:id="@+id/profile_rec_book_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="12345678" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/profile_institute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_institute" />
            <TextView
                android:id="@+id/profile_institute_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="ICST" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/profile_speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_speciality" />
            <TextView
                android:id="@+id/profile_speciality_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="Dunno, just smth" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/profile_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_group" />
            <TextView
                android:id="@+id/profile_group_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="1337" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/profile_achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_achievements"
        app:layout_constraintStart_toStartOf="@+id/profile_photo"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_holder" />

    <View
        android:id="@+id/profile_achievements_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/primary_dark"
        app:layout_constraintStart_toStartOf="@+id/profile_info"
        app:layout_constraintTop_toBottomOf="@+id/profile_achievements" />


</android.support.constraint.ConstraintLayout>
