<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/profileViewClickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_clickable"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/headerProfileView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/nav_header_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="12dp"
                android:paddingTop="8dp"
                android:text="@string/nav_header_surname"
                android:textAppearance="@style/Header3Text"
                app:layout_constraintStart_toEndOf="@id/headerProfileView"
                app:layout_constraintTop_toTopOf="@id/headerProfileView" />

            <TextView
                android:id="@+id/nav_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/nav_header_name"
                android:textAppearance="@style/Header3Text"
                app:layout_constraintStart_toEndOf="@+id/nav_header_surname"
                app:layout_constraintTop_toTopOf="@+id/nav_header_surname" />

            <TextView
                android:id="@+id/nav_header_group_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1337"
                android:textAppearance="@style/Header3Text"
                app:layout_constraintBottom_toBottomOf="@+id/headerProfileView"
                app:layout_constraintStart_toStartOf="@+id/nav_header_surname" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
